--- a/lib/sweet-alert.css
+++ b/lib/sweet-alert.css
@@ -12,14 +12,14 @@
 .sweet-alert {
   background-color: white;
   font-family: 'Open Sans', sans-serif;
-  width: 478px;
+  width: 800px;
   padding: 17px;
   border-radius: 5px;
-  text-align: center;
+  text-align: left;
   position: fixed;
   left: 50%;
   top: 50%;
-  margin-left: -256px;
+  margin-left: -418px;
   margin-top: -200px;
   overflow: hidden;
   display: none;
@@ -34,14 +34,14 @@
   .sweet-alert h2 {
     color: #575757;
     font-size: 30px;
-    text-align: center;
+    text-align: left;
     font-weight: 600;
     text-transform: none;
     position: relative; }
   .sweet-alert p {
     color: #797979;
     font-size: 16px;
-    text-align: center;
+    text-align: left;
     font-weight: 300;
     position: relative;
     margin: 0;
@@ -55,7 +55,7 @@
     font-weight: 500;
     border-radius: 5px;
     padding: 10px 32px;
-    margin: 26px 5px 0 5px;
+    margin: 26px 5px 0 0px;
     cursor: pointer; }
     .sweet-alert button:focus {
       outline: none;
@@ -81,7 +81,7 @@
     height: 80px;
     border: 4px solid gray;
     border-radius: 50%;
-    margin: 20px auto;
+    margin: 10px auto auto 0px;
     position: relative;
     box-sizing: content-box; }
     .sweet-alert .icon.error {
@@ -114,14 +114,14 @@
         left: 50%;
         top: 10px;
         border-radius: 2px;
-        margin-left: -2px;
+        margin-left: 0px;
         background-color: #F8BB86; }
       .sweet-alert .icon.warning .dot {
         position: absolute;
         width: 7px;
         height: 7px;
         border-radius: 50%;
-        margin-left: -3px;
+        margin-left: 0px;
         left: 50%;
         bottom: 10px;
         background-color: #F8BB86; }
@@ -135,7 +135,7 @@
         left: 50%;
         bottom: 17px;
         border-radius: 2px;
-        margin-left: -2px;
+        margin-left: 0px;
         background-color: #C9DAE1; }
       .sweet-alert .icon.info::after {
         content: "";
@@ -143,7 +143,7 @@
         width: 7px;
         height: 7px;
         border-radius: 50%;
-        margin-left: -3px;
+        margin-left: 0px;
         top: 19px;
         background-color: #C9DAE1; }
     .sweet-alert .icon.success {
@@ -214,9 +214,9 @@
           transform: rotate(-45deg); }
     .sweet-alert .icon.custom {
       background-size: contain;
+	  background-position center center;
       border-radius: 0;
       border: none;
-      background-position: center center;
       background-repeat: no-repeat; }
 
 /*
