--- a/lib/sweet-modal.css
+++ b/lib/sweet-modal.css
@@ -20,7 +20,7 @@
   left: 50%;
   top: 50%;
   margin-left: -418px;
-  margin-top: -200px;
+  margin-top: -200px
   overflow: hidden;
   display: none;
   z-index: 2000; }
